# inventory-demand-forecaster

./: CMakeLists.txt  Dockerfile  README.md  dashboard.py  kernel.cpp  requirements.txt  worker.py
.github/workflows/: build-deploy.yml
